# wikipedia-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/wikipedia_cli/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
