[tool.poetry]
name = "wikipedia-cli"
version = "0.1.0"
description = "A command-line application to retrieve random articles from Wikipedia."
authors = ["Soheil Salmani <salmani.soheil@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SoheilSalmani/wikipedia-cli"
homepage = "https://github.com/SoheilSalmani/wikipedia-cli"
keywords = ["wikipedia", "cli"]

[tool.poetry.scripts]
wikipedia-cli = "wikipedia_cli.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
