[tool.poetry]
name = "wikipedia-cli"
version = "0.1.0"
description = "A command-line application to retrieve random articles from Wikipedia."
authors = ["Soheil Salmani <salmani.soheil@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SoheilSalmani/wikipedia-cli"
homepage = "https://github.com/SoheilSalmani/wikipedia-cli"
keywords = ["wikipedia", "cli"]

[tool.poetry.scripts]
wikipedia-cli = "wikipedia_cli.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
black = "^21.9b0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.9.1"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wikipedia_cli"]

[tool.coverage.report]
show_missing = true
fail_under = 100
